data/derived/sp14/progs/unify/prog2940.ml.out
Characters 95-96:
  List.fold_left f base fs;;
                 ^
Error: This expression has type 'a -> 'b -> ('b -> 'a -> 'c) -> 'c
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside ('b -> 'a -> 'c) -> 'c
